# mini_claude

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  install.py  run_hook.bat  run_hook.sh  run_server.bat  run_server.sh  test_mini_claude.py
.claude/: mini_claude_reminder.md  remind.py  settings.json
mini_claude/: README.md  hooks_config.json  pyproject.toml
mini_claude/mini_claude/: __init__.py  handlers.py  llm.py  schema.py  server.py  tool_definitions.py  tool_definitions_v1_deprecated.py  tool_definitions_v2.py
mini_claude/mini_claude/hooks/: __init__.py  remind.py
mini_claude/mini_claude/tools/: __init__.py  code_quality.py  context_guard.py  conventions.py  dependencies.py  git_helper.py  habit_tracker.py  impact.py  loop_detector.py  memory.py  momentum_tracker.py  output_validator.py  scope_guard.py  scout.py  session.py  summarizer.py  test_runner.py  thinker.py  work_tracker.py
