[project]
name = "mini-claude"
version = "0.1.0"
description = "Mini Claude - A junior agent for Claude Code with memory, search, and analysis capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mini-claude = "mini_claude.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mini_claude"]
